--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -264,7 +264,7 @@
             <div class="wrap_column-1_carta">
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/mila_napo.jpg" alt="Milanesa napolitana" />
+                    <img src="./../imgs/napo2.jpg" alt="Milanesa napolitana" />
                     <div class="title-plato-carta">
                         <h3 class="h3">NAPOLITANA</h3>
                         <h4>
@@ -280,7 +280,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/mila_rellena.jpg" alt="Milanesa rellena" />
+                    <img src="./../imgs/rellena.jpg" alt="Milanesa rellena" />
                     <div class="title-plato-carta">
                         <h3 class="h3">MILANESA RELLENA</h3>
                         <h4>
@@ -327,7 +327,7 @@
 
                 <div class="plato-carta1" data-aos="flip-left" data-aos-easing="ease-out-cubic"
                     data-aos-duration="2000">
-                    <img src="./../imgs/pollo_grille.jpg" alt="Pollo a la plancha" />
+                    <img src="./../imgs/grille.jpg" alt="Pollo a la plancha" />
                     <div class="title-plato-carta">
                         <h3 class="h3">POLLO GRILLE ACOMPAÑADO</h3>
                         <h4>
