nuevos fondos de imagenes

--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -56,7 +56,8 @@
 
     <main class="main_alm">
         <section>
-            <h1 class="font_alm">¡NUESTRO MENÚ PARA QUE DISFRUTES TU ALMUERZO/CENA!</h1>
+
+            <img class="fondo" src="./../imgs/fondo.jpg" alt="">
             <div class="wrap-title-section1">
                 <h2>PASTAS</h2>
             </div>
@@ -357,9 +358,11 @@
     </main>
 
     <footer class="footer">
+        
         <div class="footer-container">
             <div class="footer-row">
                 <div class="social-links">
+                    <p>© Red wine reserva sus derechos</p>
                     <h4>Redes Sociales</h4>
                     <a href="https://api.whatsapp.com/send?phone=3532416670" target="_blank">
                         <li class="fab fa-whatsapp"></li>
@@ -367,7 +370,6 @@
                     <a href="https://instagram.com/totooferrari_?igshid=MjEwN2IyYWYwYw==" target="_blank"><i
                             class="fab fa-instagram"></i></a>
                 </div>
-
                 <div class="logo2">
                     <img src="./../imgs/red_wine.jpg" alt="red wine" />
                 </div>
