--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -33,17 +33,18 @@
                             <a class="nav-link " href="./../index.html">INICIO</a>
                         </li>
                         <li class="nav-item li">
-                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
-                        </li>
-                        <li class="nav-item li">
                             <a class="nav-link" href="./almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item li">
                             <a class="nav-link" href="./desayunos_y_meriendas.html">DESAYUNOS</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
+                        </li>
                         <li class="nav-item li">
                             <a class="nav-link" href="./reserva_tu_mesa.html">RESERVA</a>
                         </li>
+
                     </ul>
 
                 </div>
