--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -32,14 +32,14 @@
                         <li class="nav-item">
                             <a class="nav-link " aria-current="page" href="./../index.html">INICIO</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
-                        </li>
                         <li class="nav-item li">
                             <a class="nav-link" href="./almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item li">
                             <a class="nav-link" href="./desayunos_y_meriendas.html">DESAYUNOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./contacto.html">CONTACTO</a>
                         </li>
                         <li class="nav-item li">
                             <a class="nav-link" href="./reserva_tu_mesa.html">RESERVA</a>
@@ -338,6 +338,7 @@
         <div class="footer-container">
             <div class="footer-row">
                 <div class="social-links">
+                    <p>© Red wine reserva sus derechos</p>
                     <h4>Redes Sociales</h4>
                     <a href="https://api.whatsapp.com/send?phone=3532416670" target="_blank">
                         <li class="fab fa-whatsapp"></li>
