--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                             <a class="nav-link " aria-current="page" href="index.html">INICIO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="./pages/almuerzos_y_cenas.html">ALMUERZOS</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/desayunos_y_meriendas.html">DESAYUNOS</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./pages/contacto.html">CONTACTO</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="./pages/reserva_tu_mesa.html">RESERVA</a>
@@ -99,6 +99,7 @@
 
     <footer class="footer">
         <div class="footer-container">
+            <p>Todos los derechos reservados</p>
             <div class="footer-row">
                 <div class="social-links">
                     <h4>Redes Sociales</h4>
