configurando colores, imagenes y mas...

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <meta name="Description" content=" Bienvenidos al nuevo restaurant REDWINE, ubicado en Oliva Cordoba, con una amplia variedad de comidas y bebidas. ">
     <meta name="Keywords" content="RED, WINE, REDWINE, RESTAURANT, COMIDAS, ">
+    <!-- ICONO PESTAÑA -->
+    <link rel="icon" href="./imgs/red_wine.jpg" > 
     <title>RED WINE | Inicio</title>
 </head>
 
