--- a/pages/almuerzos_y_cenas.html
+++ b/pages/almuerzos_y_cenas.html
@@ -14,6 +14,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="Description" content="Seccion donde encontraras nuestro menu con el servicio gastronomico que tenemos para ofrecer con respecto a los almuerzos y cenas">
     <meta name="Keywords" content="MENU, ALMUERZOS, CENAS, COMIDA, GASTRONOMIA,">
+    <!-- ICONO PESTAÑA -->
+    <link rel="icon" href="./../imgs/red_wine.jpg" > 
     <title>ALMUERZOS Y CENAS</title>
 </head>
 
