--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <meta name="Description" content="Formulario creado para que el cliente nos envie un mensaje o cualquier duda que se le presente, nos pondremos en contacto">
     <meta name="Keywords" content="Formulario, Contacto, Mensaje, Consulta">
+    <!-- ICONO PESTAÑA -->
+    <link rel="icon" href="./../imgs/red_wine.jpg" > 
     <title>CONTACTO</title>
 </head>
 
