--- a/pages/reserva_tu_mesa.html
+++ b/pages/reserva_tu_mesa.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <meta name="Description" content="Nuestro whatsapp para que hagas la reserva con anticipacion.">
     <meta name="Keywords" content="Reserva, Mesa, Whatsapp, Mensaje">
+    <!-- ICONO PESTAÑA -->
+    <link rel="icon" href="./../imgs/red_wine.jpg" > 
     <title>RESERVA TU MESA</title>
 
 </head>
