--- a/pages/desayunos_y_meriendas.html
+++ b/pages/desayunos_y_meriendas.html
@@ -14,6 +14,8 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="Description" content="Seccion donde encontraras nuestro menu con el servicio gastronomico que tenemos para ofrecer con respecto a desayunos y meriendas">
     <meta name="Keywords" content="MENU, DESAYUNOS, MERIENDA, COMIDA, GASTRONOMIA,">
+    <!-- ICONO PESTAÑA -->
+    <link rel="icon" href="./../imgs/red_wine.jpg" > 
     <title>DESAYUNOS Y MERIENDAS</title>
 </head>
 
